[gd_scene load_steps=3 format=3 uid="uid://bw6eh1qy8it4a"]

[ext_resource type="PackedScene" uid="uid://4rwmb5gf6jqu" path="res://scenes/game/modal/modal.tscn" id="1_4a3vp"]
[ext_resource type="Script" path="res://scenes/game/modal/menu_modal.gd" id="2_w7vg4"]

[node name="MenuModal" instance=ExtResource("1_4a3vp")]
script = ExtResource("2_w7vg4")

[node name="Label" parent="Background/Title/Margin" index="0"]
text = "Menu"

[node name="ButtonLeft" parent="Background/Buttons/MarginContainer/HBoxContainer" index="0"]
text = "MAIN"

[node name="ButtonMiddle" parent="Background/Buttons/MarginContainer/HBoxContainer" index="1"]
text = "RESTART"

[node name="ButtonRight" parent="Background/Buttons/MarginContainer/HBoxContainer" index="2"]
text = "BACK"

[connection signal="pressed" from="Background/Buttons/MarginContainer/HBoxContainer/ButtonLeft" to="." method="_on_button_left_pressed"]
[connection signal="pressed" from="Background/Buttons/MarginContainer/HBoxContainer/ButtonMiddle" to="." method="_on_button_middle_pressed"]
[connection signal="pressed" from="Background/Buttons/MarginContainer/HBoxContainer/ButtonRight" to="." method="_on_button_right_pressed"]
